<resources>
    <string name="app_name">AccountingManager</string>
    <string name="main_menu_text_1">余额</string>
    <string name="main_menu_text_2">资产透视</string>
    <string name="main_menu_text_3">工具</string>
    <string name="newwork_timeout">网络连接超时!</string>
    <string name="netWorkErr_1">请程序权限，无法获取imei</string>
    <string name="netWorkErr">请检查网络设置</string>
    <string name="loadMessage">数据加载中，请稍后...</string>
    <string name="dialog_wait">请稍后...</string>
    <string name="accouting_home_title_text">总资产（元）</string>
    <string name="account_msg_1">经典视图</string>
    <string name="account_msg_2">分类视图</string>
    <string name="account_msg_3">到期视图</string>
    <string name="account_msg_4">昨天收益(元):</string>
    <string name="search">搜索</string>
    <string name="live">生活资产</string>
    <string name="property">理财资产</string>
    <string name="other">其他</string>
    <string name="selector_property">选择资产</string>
    <string name="cash">现金</string>
    <string name="main_menu_text_4">资讯</string>
    <string name="addInputContentText_1">当前总金额</string>
    <string name="addInputContentText_2">币种</string>
    <string name="addInputContentText_3">人民币</string>
    <string name="addInputContentText_4">输入当前所持有现金的总额，点击"确定"即可添加。</string>
    <string name="ok">确定</string>
    <string name="AddInputContent_MSG_1">请输入金额</string>
    <string name="selector_bank_list_msg_1">添加后可以汇总管理银行卡余额</string>
    <string name="selector_bank_list_msg_2">理财工具会陆续支持更多银行的自动余额同步，请保持关注</string>
    <string name="selector_bank_list_msg_3">支持自动同步余额</string>
    <string name="Selector_Bank">选择银行</string>
    <string name="selector_money_type">请选择货币种类</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="open">展开</string>
    <string name="close">关闭</string>
    <string name="element">元</string>
    <string name="gu">股</string>
    <string name="share">份</string>
    <string name="rate_icon">%</string>
    <string name="submit">提交</string>
    <string name="aliPay">支付宝</string>
    <string name="weChat">微信</string>
    <string name="more">更多</string>
    <string name="moreAccount">更多账户</string>
    <string name="selectorAccount">选择账户</string>
    <string name="accountBalance">账户余额</string>
    <string name="accountName">账户名称</string>
    <string name="AddAssetsMsg_1">需要定期手动更新余额</string>
    <string name="fund_inpt_message_1">账户总额</string>
    <string name="fund_inpt_message_2">请输入金额</string>
    <string name="city">城市</string>
    <string name="FundInputMsg_1">请输入城市名称</string>
    <string name="fund">公积金</string>
    <string name="lia_selector_msg_1">欠款</string>
    <string name="lia_selector_msg_2">我有欠款</string>
    <string name="lia_selector_msg_3">花呗、借呗、白条</string>
    <string name="lia_selector_msg_4">消费贷款</string>
    <string name="lia_selector_msg_5">房贷</string>
    <string name="lia_selector_msg_6">车贷</string>
    <string name="arrears_input_msg_1">简单</string>
    <string name="arrears_input_msg_2">高级</string>
    <string name="Simple_msg_1">债主</string>
    <string name="Simple_msg_2">总金额</string>
    <string name="Simple_msg_3">利率</string>
    <string name="Simple_msg_4">期限</string>
    <string name="Simple_msg_5">起息时间</string>
    <string name="Simple_msg_6">还款方式</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">天</string>
    <string name="individual">个</string>
    <string name="Simple_msg_7">到期还本付息</string>
    <string name="Simple_msg_8">个人或平台</string>
    <string name="simple_msg_1">请输入债主！</string>
    <string name="simple_msg_2">请输入金额</string>
    <string name="simple_msg_3">请输入利率</string>
    <string name="simple_msg_4">请输入期限</string>
    <string name="SelectorType">选择类型</string>
    <string name="mortgage_msg_1">商业贷款</string>
    <string name="mortgage_msg_2">公积金贷款</string>
    <string name="mortgage_msg_3">组合贷款</string>
    <string name="Business_msg_1">房产名称</string>
    <string name="Business_msg_2">贷款本金</string>
    <string name="Business_msg_3">年利率</string>
    <string name="Business_msg_4">每月还款日</string>
    <string name="Business_msg_5">15号</string>
    <string name="Business_msg_6">选填</string>
    <string name="business_day">日</string>
    <string name="stage">期</string>
    <string name="Business_msg_7">20年/240期</string>
    <string name="Combination_msg_1">商业贷款本金</string>
    <string name="Combination_msg_2">商业贷款年利率</string>
    <string name="Combination_msg_3">公积金贷款本金</string>
    <string name="Combination_msg_4">期限</string>
    <string name="Combination_msg_5">起息时间</string>
    <string name="Combination_msg_6">还款方式</string>
    <string name="Combination_msg_7">每月还款日</string>
    <string name="Combination_msg_8">15日</string>
    <string name="Combination_msg_9">等额本息</string>
    <string name="Combination_msg_10">公积金贷款年利率</string>
    <string name="combination_msg_11">请输入商业贷款金额</string>
    <string name="combination_msg_12">请输入商业贷款年利率</string>
    <string name="combination_msg_13">请输入公积金贷款金额</string>
    <string name="combination_msg_14">请输入公积金贷款年利率</string>
    <string name="lend_msg_1">借出金额</string>
    <string name="lend_msg_2">借款人</string>
    <string name="lend_msg_3">请输入借出金额</string>
    <string name="lend_msg_4">请输入借款人姓名</string>
    <string name="fixed_msg_1">请输入名称</string>
    <string name="fixed_msg_3">名称</string>
    <string name="fixed_msg_4">资产金额</string>
    <string name="fixed_msg_2">请输入金额</string>
    <string name="fixed_msg_5">请输入名称</string>
    <string name="NetLoan_msg_1">定期</string>
    <string name="NetLoan_msg_2">活期</string>
    <string name="NetLoan_msg_3">余额</string>
    <string name="regular_msg_1">选填</string>
    <string name="regular_msg_2">项目名称</string>
    <string name="regular_msg_3">实际投资金额（不含抵扣）</string>
    <string name="regular_msg_4">投资金额</string>
    <string name="regular_msg_5">年化收益率</string>
    <string name="regular_msg_6">投资期限</string>
    <string name="regular_msg_7">起息时间</string>
    <string name="regular_msg_8">到期还本付息</string>
    <string name="regular_msg_9">回款方式</string>
    <string name="regular_msg_10">输入该笔资产的相关信息，即可开始追踪该笔资产</string>
    <string name="rate">利率</string>
    <string name="term">期限</string>
    <string name="startTime">起息时间</string>
    <string name="repaymentMode">还款方式</string>
    <string name="netLoan_current_msg_1">当前金额</string>
    <string name="netLoan_current_msg_2">年化收益率</string>
    <string name="NetLoan_Balance_msg_1">账户余额</string>
    <string name="monetary_fund_inpt_msg_1">添加所持有的该货币基金当前总额后，本工具会自动跟踪该笔资产的市场净值变化，但发生新的购买和赎时，需要您及时修改</string>
    <string name="fund_details_simple_msg_1">当前持有份数</string>
    <string name="fund_details_simple_msg_2">选填项</string>
    <string name="fund_details_simple_msg_3">选填</string>
    <string name="fund_details_simple_msg_4">持仓总成本</string>
    <string name="fund_details_simple_msg_5">累计收益</string>
    <string name="fund_details_simple_msg_6">一分钟婉转基金记账</string>
    <string name="fund_details_senior_msg_1">申购金额</string>
    <string name="fund_details_senior_msg_2">请选择</string>
    <string name="fund_details_senior_msg_3">申购确认日</string>
    <string name="fund_details_senior_msg_4">申购费率</string>
    <string name="fund_details_senior_msg_5">记定投</string>
    <string name="fund_details_simple_msg_7">请填写持有份数</string>
    <string name="fund_details_simple_msg_8">持仓总成本</string>
    <string name="fund_details_simple_msg_9">累计收益</string>
    <string name="fund_details_senior_msg_6">请输入申购金额</string>
    <string name="fund_details_senior_msg_7">请输入申购确认日期</string>
    <string name="fund_details_senior_msg_8">请输入申购费率</string>
    <string name="fund_details_senior_msg_9">申购确认日期</string>
    <string name="fund_details_senior_msg_10">申购费率</string>
    <string name="fund_content_msg_1">基金名或代码</string>
    <string name="fund_content_msg_2">添加后会自动跟踪市场净值变化，计算待仓收益</string>
    <string name="fund_content_msg_3">热门基金</string>
    <string name="Shares_content_msg_1">股票名或代码</string>
    <string name="Shares_content_msg_2">添加后会自动跟踪市场净值变化，计算待仓收益</string>
    <string name="Shares_content_msg_3">热门股票</string>
    <string name="Shares_input_content_msg_1">当前持有股数</string>
    <string name="Shares_input_content_msg_2">买入单价</string>
    <string name="Shares_input_content_msg_3">多笔交易时可填大致的平均买入价</string>
    <string name="Shares_input_content_msg_4">请输入当前持有股数</string>
    <string name="Shares_input_content_msg_5">请输入买入单价</string>
    <string name="Shares_input_content_msg_6">买入单价</string>
    <string name="Shares_input_content_msg_7">持有总股数</string>
    <string name="fixed_deposit_input_msg_1">存期</string>
    <string name="fixed_deposit_input_msg_2">存入时间</string>
    <string name="fixed_deposit_input_msg_3">工商银行</string>
    <string name="fixed_deposit_input_msg_4">存入银行</string>
    <string name="fixed_deposit_input_msg_5">利率</string>
    <string name="fixed_deposit_input_msg_6">存入金额</string>
    <string name="fixed_deposit_input_msg_7">请输入金额</string>
    <string name="fixed_deposit_input_msg_8">请输入利率</string>
    <string name="fixed_deposit_input_msg_9">请输入存入时间</string>
    <string name="fixed_deposit_input_msg_10">请输入存入银行</string>
    <string name="fixed_deposit_input_msg_11">存入时间</string>
    <string name="fixed_deposit_input_msg_12">利率</string>
    <string name="fixed_deposit_input_msg_13">存入银行</string>
    <string name="fixed_deposit_input_msg_14">6个月</string>
    <string name="fixed_deposit_input_msg_15">1年</string>
    <string name="fixed_deposit_input_msg_16">2年</string>
    <string name="fixed_deposit_input_msg_17">3年</string>
    <string name="fixed_deposit_input_msg_18">5年</string>
    <string name="fixed_deposit_input_msg_19">3个月</string>
    <string name="monetaryfund_msg_1">添加后可以获得到期提醒，平台只能监控预警</string>
    <string name="bankfinancing_home_msg_1">添加后可以跟踪收益，获得到期提醒</string>
    <string name="addassets_msg_1">手动添加</string>
    <string name="addassets_msg_2">同步市场行情，需要手动更新数量</string>
    <string name="addassets_msg_3">自动同步</string>
    <string name="addassets_msg_4">安全授权登录，自动快捷查询</string>
    <string name="bank_input_msg_1">卡内余额</string>
    <string name="bank_input_msg_2">卡号末四位选填</string>
    <string name="bank_input_msg_3">银行卡号</string>
    <string name="netLoanHomeSelector_msg_1">添加后可以获得到期提醒，平台只能监控预警</string>
    <string name="bank_financing_input_msg_1">投资金额</string>
    <string name="bank_financing_input_msg_2">年化收益率</string>
    <string name="bank_financing_input_msg_3">起息时间</string>
    <string name="bank_financing_input_msg_4">投资期限</string>
    <string name="bank_financing_input_msg_5">请选择起息时间</string>
    <string name="insurance_financing_msg_1">名称</string>
    <string name="insurance_financing_msg_2">投资金额</string>
    <string name="insurance_financing_msg_3">年化收益率</string>
    <string name="insurance_financing_msg_4">投资期限</string>
    <string name="insurance_financing_msg_5">起息时间</string>
    <string name="insurance_financing_msg_6">回款方式</string>
    <string name="insurance_financing_msg_16">请输入投资期限</string>
    <string name="insurance_financing_msg_17">请输入名称</string>
    <string name="insurance_financing_msg_19">输入该笔资产的相关信息，即可开始追踪该笔资产</string>
    <string name="addAssets_other_simple_msg_1">请输入名称</string>
    <string name="addAssets_other_simple_msg_2">名称</string>
    <string name="addAssets_other_simple_msg_3">资产金额</string>
    <string name="addAssets_other_simple_msg_4">选填</string>
    <string name="addAssets_other_simple_msg_5">利率</string>
    <string name="addAssets_other_simple_msg_6">备注</string>
    <string name="addAssets_other_simple_msg_7">选填</string>
    <string name="addAssets_other_senior_msg_1">请输入名称</string>
    <string name="addAssets_other_senior_msg_2">名称</string>
    <string name="addAssets_other_senior_msg_3">资产总额</string>
    <string name="addAssets_other_senior_msg_4">年化收益率</string>
    <string name="addAssets_other_senior_msg_5">投资期限</string>
    <string name="addAssets_other_senior_msg_6">起始时间</string>
    <string name="addAssets_other_senior_msg_7">回款方式</string>
    <string name="addAssets_other_senior_msg_18">请输入投资期限</string>
</resources>