<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.accountingmanager.Sys.Widgets.UiContentView.UiContentView
        android:id="@+id/insurance_financing_name"
        style="@style/UiContentStyle_input"
        android:layout_marginTop="@dimen/viewPaddingTop"
        app:uiContentGravity="right"
        app:uiContentHint="@string/insurance_financing_msg_17"
        app:uiContentTitleText="@string/insurance_financing_msg_1" />

    <View style="@style/LineViewStyle" />

    <com.accountingmanager.Sys.Widgets.UiContentView.UiContentView
        android:id="@+id/insurance_financing_number"
        style="@style/UiContentStyle_input"
        app:uiContentGravity="right"
        app:uiContentHint="0"
        app:uiContentTitleText="@string/insurance_financing_msg_2" />


    <com.accountingmanager.Sys.Widgets.UiContentView.UiContentView
        android:id="@+id/insurance_financing_rate"
        style="@style/UiContentStyle_input"
        android:layout_marginTop="@dimen/viewPaddingTop"
        app:uiContentGravity="right"
        app:uiContentHint="0"
        app:uiContentTitleText="@string/insurance_financing_msg_3" />

    <View style="@style/LineViewStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteColor"
        android:orientation="horizontal">

        <com.accountingmanager.Sys.Widgets.UiContentView.UiContentView
            android:id="@+id/insurance_financing_time"
            style="@style/UiContentStyle_input"
            android:layout_weight="1"
            app:uiContentGravity="right"
            app:uiContentHint="@string/insurance_financing_msg_16"
            app:uiContentTitleText="@string/insurance_financing_msg_4" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/insurance_financing_month"
                style="@style/menuRadioButtonStyle"
                android:checked="true"
                android:text="@string/month" />

            <RadioButton
                android:id="@+id/insurance_financing_day"
                style="@style/menuRadioButtonStyle"
                android:text="@string/day" />
        </RadioGroup>
    </LinearLayout>

    <View style="@style/LineViewStyle" />

    <com.accountingmanager.Sys.Widgets.UiContentView.UiContentView
        android:id="@+id/insurance_financing_startTime"
        style="@style/UiContentStyle_lvShow"
        app:uiContentGravity="right"
        app:uiContentTitleText="@string/insurance_financing_msg_5" />

    <View style="@style/LineViewStyle" />

    <com.accountingmanager.Sys.Widgets.UiContentView.UiContentView
        android:id="@+id/insurance_financing_mode"
        style="@style/UiContentStyle_lvShow"
        app:uiContentGravity="right"
        app:uiContentTitleText="@string/insurance_financing_msg_6" />

    <TextView
        style="@style/TextMsgStyle"
        android:gravity="left"
        android:text="@string/insurance_financing_msg_19" />

    <Button
        android:id="@+id/insurance_financing_submit"
        style="@style/buttonStyle"
        android:text="@string/submit" />

</LinearLayout>