<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.accountingmanager.Sys.Widgets.UiContentView.UiContentView
        android:id="@+id/fixed_name"
        style="@style/UiContentStyle_input"
        app:uiContentGravity="right"
        app:uiContentHint="@string/fixed_msg_5"
        android:layout_marginTop="@dimen/viewPaddingTop"
        app:uiContentTitleText="@string/fixed_msg_3" />

    <View style="@style/LineViewStyle" />

    <com.accountingmanager.Sys.Widgets.UiContentView.UiContentView
        android:id="@+id/fixed_number"
        style="@style/UiContentStyle_input"
        app:uiContentGravity="right"
        app:uiContentTitleText="@string/fixed_msg_4" />

    <Button
        android:id="@+id/fixed_submit"
        style="@style/buttonStyle"
        android:text="@string/submit" />

</LinearLayout>